--- a/styles/main.css
+++ b/styles/main.css
@@ -425,6 +425,7 @@ body {
   }
   .nav {
     width: 90%;
+    padding: 4rem 2rem;
   }
 
   .nav .ul li {
@@ -436,7 +437,7 @@ body {
   }
 
   .container {
-    padding: 5rem 1.5rem;
+    padding: 5rem 1rem;
   }
 
   .footer-bottom-container {
