--- a/styles/register.css
+++ b/styles/register.css
@@ -75,8 +75,8 @@
 .switch {
   position: relative;
   display: inline-block;
-  width: 34px;
-  height: 18px;
+  width: 38px;
+  height: 22px;
 }
 
 .switch input {
@@ -99,8 +99,8 @@
   position: absolute;
   height: 12px;
   width: 12px;
-  right: 3px;
-  bottom: 3px;
+  right: 5px;
+  bottom: 5px;
   background-color: var(--color-white-light);
   border-radius: 50%;
   transition: 0.4s;
@@ -134,7 +134,7 @@ input:checked + .slider:before {
   border: 1px solid var(--color-gray-light);
   padding: 1rem;
   border-radius: 50px;
-  min-width: 420px;
+  min-width: 310px;
 }
 
 .register-form-input-container > input::placeholder {
@@ -214,16 +214,25 @@ input:checked + .slider:before {
 }
 
 @media (max-width: 650px) {
+  .register-section {
+    padding-top: 0;
+  }
   .register-container {
     flex-direction: column;
   }
 
   .register-form-container {
-    padding: 3rem 2rem;
+    padding: 2rem 1rem;
     width: 100%;
   }
 
   .register-form-input-container > input {
-    min-width: 100%;
+    min-width: unset;
+    max-width: 330px;
   }
+
+  /* .phone-input {
+    padding: 1rem 0rem 1rem 5rem !important;
+    max-width: 100%;
+  } */
 }
